# tfmc

./: CMakeLists.txt  README.md
include/: cmd_pallete.h  f_mgr_mode.h  fs_seek.h  views.h  windows.h
src/: f_mgr_modes.c  fs_seek.c  main.c  views.c  windows.c
